# telemetry-simulator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  user_prompts_all.txt
docs/: clustering-scenarios.md  generating-telemetry.md  live-trace-visualization.md  scenario-yaml-reference.md  statistical-scenarios.md  telemetry-trace-schema.md  use-case-feature-requirements.md
resource/config/: _EXAMPLE_CONFIG_.yaml  _EXAMPLE_RESOURCE_.yaml  config.yaml  resource.yaml
resource/scenarios/conventions/: SCENARIO_DESIGN.md  scenario_authoring_checklist.txt  semconv.yaml
resource/scenarios/definitions/: README.md  SCENARIOS.md  _EXAMPLE_SCENARIO_.yaml  agent_confusion_cancel_claim_phone_wrong_division_electronics.yaml  agent_confusion_cancel_product_instead_of_claim.yaml  agent_confusion_claim_status_ungrounded_summarization.yaml  agent_confusion_new_claim_partial_tools.yaml  agent_confusion_new_claim_wrong_tool_order.yaml  agent_confusion_pay_phone_wrong_division_electronics.yaml  cancel_claim_appliances.yaml  cancel_claim_appliances_higher_latency.yaml  cancel_claim_appliances_tool_4xx_invalid_params.yaml  claim_status_appliances_tool_4xx_invalid_params.yaml  claim_status_phone_higher_latency.yaml  claim_status_phone_tool_4xx_invalid_params.yaml  example_scenario.yaml  generic_higher_latency_peak_hours.yaml  new_claim_appliances_higher_latency_peak_hours.yaml  new_claim_appliances_tool_4xx_invalid_params.yaml  new_claim_electronics_tool_4xx_invalid_params.yaml  new_claim_phone.yaml  new_claim_phone_mcp_tool_retry_then_success.yaml  new_claim_phone_multi_turn.yaml  request_allowed_audit_flagged.yaml  request_blocked_by_policy.yaml  request_blocked_invalid_context_augment_exception.yaml  request_blocked_policy_fail_closed.yaml  request_blocked_rate_limited.yaml  request_error_policy_runtime.yaml  request_error_policy_unavailable.yaml  update_appointment_electronics_higher_latency.yaml  (+1 more)
scripts/: analyze_traces_vs_scenarios.py  ensure_new_claim_filing_intent.py  extract_user_prompts_by_context.py  generate_all_definitions_trace_spec.py  otelsim_entry.py  out  prefix_claim_ids_claim_namespace.py  prefix_claim_ids_in_scenarios.py  restore_mangled_yaml_from_git.py
src/simulator/: __init__.py  cli.py  config.py  defaults.py  resource_loader.py
tests/: __init__.py  test_compiler_and_validation.py  test_config_resolver.py  test_latency_profile_selection.py  test_metrics_and_logs_emission.py  test_scenario_loader.py
(+337 files in other folders)
